# knowledge-attractors

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_ATTRACTOR_COMPLETE.md  FINAL_CODE_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  REPOSITORY_COMPLETE.md  SHIPMENT_READY.md  __main__.py  asa_bias_system.py  cli_module.py  code_attractor_system.py  code_validator.py  demo_complete_system.py  generate_figures.py  language_packs.py  ollama_optimized.py  pyproject.toml  qwen_code_test.py  repo_mining.py  requirements.txt  setup.py  tag_injection_enhanced.py  test_compact_serializer.py  two_pass_decode.py
.github/workflows/: attractors.yml
archive/docs/: OLLAMA_RESULTS.md  SHARP_TWEAKS.md  SHARP_TWEAKS_RESULTS.md
archive/experiments/: attractor_kit.py  attractor_mining.py  resonance_loop.py  resonance_loop_v2.py  rlad_system.py
archive/research/: ABSTRACT.md  FINAL_SUMMARY.md  IMPLICATIONS.md  Idea.md  JOURNEY_COMPLETE.md  REVOLUTION.md
tests/: test_integration.py  test_smoke.py
